--- a/Sprint/Sprint/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Sprint/Sprint/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,72 +5,95 @@
     ViewData["Title"] = "Register";
 }
 
-    <h1 class="text-center">@ViewData["Title"]</h1>
-            <div align="center" style="min-height:440px;">
-                <form asp-route-returnUrl="@Model.ReturnUrl" method="post" style="width:500px">
-                    <h4 class="text-center">Create a new account.</h4>
-                    <hr />
-                    <div class="col-md-12">
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="form-group">
-                            <label style="float:left" asp-for="Input.Name"></label>
-                            <input asp-for="Input.Name" class="form-control" />
-                            <span asp-validation-for="Input.Name" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label style="float:left" asp-for="Input.Birthdate"></label>
-                            <input asp-for="Input.Birthdate" class="form-control" />
-                            <span asp-validation-for="Input.Birthdate" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label style="float:left" asp-for="Input.Username"></label>
-                            <input asp-for="Input.Username" class="form-control" />
-                            <span asp-validation-for="Input.Username" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label style="padding-top:15px;float:left" asp-for="Input.Email"></label>
-                            <input asp-for="Input.Email" class="form-control" />
-                            <span asp-validation-for="Input.Email" class="text-danger"></span>
-                        </div>
-                        <div class="form-group" >
-                            <label style="float:left" asp-for="Input.Password"></label>
-                            <input asp-for="Input.Password" class="form-control" />
-                            <span asp-validation-for="Input.Password" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label style="float:left;" asp-for="Input.ConfirmPassword"></label>
-                            <input asp-for="Input.ConfirmPassword" class="form-control" />
-                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="row" style="width:60%;padding-left:25%;padding-top:10px;">
-                        <label asp-for="Input.Gender"></label>
-                    </div>
-                    <div class="text-center">
-                        <label for="male" class="radio-inline">
-                            <input asp-for="Input.Gender" value="male" type="radio">
-                            Male
-                        </label>
-                        <label for="Female" class="radio-inline">
-                            <input asp-for="Input.Gender" value="female" type="radio">
-                            Female
-                        </label>
-                        <label for="non-binary" class="radio-inline">
-                            <input asp-for="Input.Gender" value="non-binary" type="radio">
-                            Non-binary
-                        </label>
-                        <label for="other" class="radio-inline">
-                            <input asp-for="Input.Gender" value="other" type="radio">
-                            Other
-                        </label>
-                        <span asp-validation-for="Input.Gender" class="text-danger"></span>
-                    </div>
-                    <button type="submit" class="btn btn-primary button" style="position:relative">Register</button>
-                </form>
+<h1 class="text-center">@ViewData["Title"]</h1>
+
+<div class="row centered-form">
+    <div class="container col-md-6">
+        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <h4 class="text-center">Create a new account.</h4>
+            <hr />
+            <div class="row">
+                <div class="col-md-6 form-group">
+                    <label asp-for="Input.Name"></label>
+                    <input asp-for="Input.Name" class="form-control" tabindex="1" />
+                    <span asp-validation-for="Input.Name" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-group">
+                    <label asp-for="Input.Email"></label>
+                    <input asp-for="Input.Email" class="form-control" tabindex="4" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
             </div>
-       
+            <div class="row">
+                <div class="col-md-6 form-group">
+                    <label asp-for="Input.Birthdate"></label>
+                    <input asp-for="Input.Birthdate" class="form-control" tabindex="2" />
+                    <span asp-validation-for="Input.Birthdate" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-group">
+                    <label asp-for="Input.Password"></label>
+                    <input asp-for="Input.Password" class="form-control" tabindex="5" />
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 form-group">
+                    <label asp-for="Input.Username"></label>
+                    <input asp-for="Input.Username" class="form-control" tabindex="3" />
+                    <span asp-validation-for="Input.Username" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-group">
+                    <label asp-for="Input.ConfirmPassword"></label>
+                    <input asp-for="Input.ConfirmPassword" class="form-control" tabindex="6" />
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12 form-group">
+                    <label asp-for="Input.Gender" class="d-block text-center"></label>
+                    <div class="d-flex justify-content-center">
+                        <div class="form-check form-check-inline ml-3 mr-3">
+                            <input asp-for="Input.Gender" value="male" type="radio" class="form-check-input" tabindex="7">
+                            <label class="form-check-label">Male</label>
+                        </div>
+                        <div class="form-check form-check-inline ml-3 mr-3">
+                            <input asp-for="Input.Gender" value="female" type="radio" class="form-check-input">
+                            <label class="form-check-label">Female</label>
+                        </div>
+                        <div class="form-check form-check-inline ml-3 mr-3">
+                            <input asp-for="Input.Gender" value="non-binary" type="radio" class="form-check-input">
+                            <label class="form-check-label">Non-binary</label>
+                        </div>
+                        <div class="form-check form-check-inline ml-3 mr-3">
+                            <input asp-for="Input.Gender" value="other" type="radio" class="form-check-input">
+                            <label class="form-check-label">Other</label>
+                        </div>
+                    </div>
+                    <span asp-validation-for="Input.Gender" class="text-danger d-block text-center"></span>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-6 form-group">
+                    <div class="form-check mt-2">
+                        @if (Model.Input == null)
+                        {
+                            <input asp-for="Input.ReceivePromotionalEmails" type="checkbox" class="form-check-input" checked tabindex="11">
+                        }
+                        else
+                        {
+                            <input asp-for="Input.ReceivePromotionalEmails" type="checkbox" class="form-check-input" tabindex="11">
+                        }
+                        <label asp-for="Input.ReceivePromotionalEmails" class="form-check-label"></label>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <button type="submit" class="btn btn-primary button" tabindex="12">Register</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
