--- a/Sprint/Sprint/Views/Cart/Gift.cshtml
+++ b/Sprint/Sprint/Views/Cart/Gift.cshtml
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div class="row centered-form">
+<div class="centered-form">
     <div class="container col-md-6">
         <h4 class="text-light font-weight-light text-uppercase">
             <i class="fa fa-gamepad text-secondary pr-2" aria-hidden="true"></i>@Model.Game.Name
