--- a/Sprint/Sprint/Views/Game/Details.cshtml
+++ b/Sprint/Sprint/Views/Game/Details.cshtml
@@ -52,12 +52,12 @@
                 <h5 class="text-light">@Html.DisplayNameFor(model => model.Game.RegularPrice)</h5>
                 <p class="text-light">@Html.DisplayFor(model => model.Game.RegularPrice)</p>
             }
-        <form asp-route-id="@Model.Game.GameId" asp-controller="Reviews" asp-action="Index">
+        <div class="form-group">
             <h5 class="text-light">@Html.DisplayNameFor(model => model.AverageRating)</h5>
             @if (Model.AverageRating == 0)
             {
                 <p style="font-style: italic;"> No reviews yet..</p>
-                <button type="submit" class="btn btn-primary w-100">Add a Review</button>
+                <a asp-route-id="@Model.Game.GameId" asp-controller="Reviews" asp-action="Index" class="btn btn-primary w-100">Add a Review</a>
             }
             else
             {
@@ -73,10 +73,10 @@
                     <input asp-for="@Model.AverageRating" type="radio" id="star1" name="@Model.AverageRating" value="1" />
                     <label for="star1" title="text">1 star</label>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">View Reviews</button>
+                <a asp-route-id="@Model.Game.GameId" asp-controller="Reviews" asp-action="Index"  type="submit" class="btn btn-primary w-100">View Reviews</a>
             }
 
-        </form>
+        </div>
         </div>
     </div>
 
