--- a/Sprint/Sprint/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Sprint/Sprint/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -6,4 +6,6 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.WalletNavClass(ViewContext)" id="wallet" asp-controller="Wallet" asp-action="Index">Wallet</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.AddressNavClass(ViewContext)" id="address" asp-controller="Address" asp-action="Index">Addresses</a></li>
 </ul>
