--- a/Sprint/Sprint/Views/Wallet/Create.cshtml
+++ b/Sprint/Sprint/Views/Wallet/Create.cshtml
@@ -13,8 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+                @Html.Hidden("UserId", (object)ViewBag.UserId)
             </div>
             <div class="form-group">
                 <label asp-for="CardNumber" class="control-label"></label>
