--- a/Sprint/Sprint/Views/Wallet/Delete.cshtml
+++ b/Sprint/Sprint/Views/Wallet/Delete.cshtml
@@ -29,11 +29,8 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Year)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.AccountNum)
+            @Html.HiddenFor(model => model.User.AccountNum)
         </dd class>
     </dl>
     
