--- a/Sprint/Sprint/Views/Wallet/Edit.cshtml
+++ b/Sprint/Sprint/Views/Wallet/Edit.cshtml
@@ -14,9 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="WalletId" />
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                @Html.Hidden("UserId", (object)ViewBag.UserId)
             </div>
             <div class="form-group">
                 <label asp-for="CardNumber" class="control-label"></label>
