--- a/Sprint/Sprint/Views/Wallet/Index.cshtml
+++ b/Sprint/Sprint/Views/Wallet/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.Year)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.User)
+                
             </th>
             <th></th>
         </tr>
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Year)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.User.AccountNum)
+                @Html.HiddenFor(modelItem => item.User.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.WalletId">Edit</a> |
