--- a/Sprint/Sprint/Views/Cart/Index.cshtml
+++ b/Sprint/Sprint/Views/Cart/Index.cshtml
@@ -128,6 +128,8 @@
                     }
                 </tbody>
             </table>
+
+            <a class="btn btn-primary" role="button" asp-controller="Checkout" asp-action="Index">Proceed to checkout</a>
         }
         else
         {
