Regex Postal fix and title changes

--- a/Sprint/Sprint/Views/Address/Index.cshtml
+++ b/Sprint/Sprint/Views/Address/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Sprint.Models.Address>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Address Manager";
 }
 
-<h1>Account Addresses</h1>
+<h1>Your Addresses :</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add New</a>
 </p>
 <table class="table">
     <thead>
