--- a/Sprint/Sprint/Views/Wallet/Index.cshtml
+++ b/Sprint/Sprint/Views/Wallet/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Sprint.Models.Wallet>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Wallet";
 }
 
-<h1>Index</h1>
+<h1>Cards in your Wallet</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add New</a>
 </p>
 <table class="table">
     <thead>
