--- a/Sprint/Sprint/Views/Address/Create.cshtml
+++ b/Sprint/Sprint/Views/Address/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Add a New Address</h1>
 
-<h4>Address</h4>
+<h4>Address Information</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
