--- a/Sprint/Sprint/Views/Wallet/Create.cshtml
+++ b/Sprint/Sprint/Views/Wallet/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Add a New Credit Card to your Wallet</h1>
 
-<h4>Wallet</h4>
+<h4>Card Information</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
