--- a/Sprint/Sprint/Views/Shared/_Layout.cshtml
+++ b/Sprint/Sprint/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark font-weight-bold text-uppercase" asp-area="" asp-controller="Game" asp-action="Index">Games</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark font-weight-bold text-uppercase" asp-area="" asp-controller="Event" asp-action="Index">Events</a>
+                        </li>
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
