--- a/Sprint/Sprint/wwwroot/css/style.css
+++ b/Sprint/Sprint/wwwroot/css/style.css
@@ -20,6 +20,11 @@ body {
     padding: 20px;
 }
 
+.moist-bg-blue {
+    background-color: #216eb9;
+    color: #ffffff;
+}
+
 .moist-banner-title {
     font-size: 25px;
     line-height: 30px;
