--- a/Sprint/Sprint/Views/Checkout/Index.cshtml
+++ b/Sprint/Sprint/Views/Checkout/Index.cshtml
@@ -65,16 +65,19 @@
             }
         }
 
-        if (shipCount == 0) {
-            document.getElementById("shippingAddressDiv").style.display = "none";
-            document.getElementById("billingAddressDiv").style.display = "none";
-            document.getElementById("selectShippingAddress").disabled = true;
-            document.getElementById("selectBillingAddress").disabled = true;
-        } else {
-            document.getElementById("shippingAddressDiv").style.display = "block";
-            document.getElementById("billingAddressDiv").style.display = "block";
-            document.getElementById("selectShippingAddress").disabled = false;
-            document.getElementById("selectBillingAddress").disabled = false;
+        let shippingSelect = document.getElementById("selectShippingAddress");
+        let billingSelect = document.getElementById("selectBillingAddress");
+
+        document.getElementById("shippingAddressDiv").style.display = shipCount == 0 ? "none" : "block";
+        document.getElementById("billingAddressDiv").style.display = shipCount == 0 ? "none" : "block";
+        if (shippingSelect != null) shippingSelect.disabled = shipCount == 0;
+        if (billingSelect != null) billingSelect.disabled = shipCount == 0;
+
+        if (document.getElementsByName("ShippingId")?.length != 1) {
+            document.getElementById("placeOrderButton").style.display = shipCount == 0 ? "block" : "none";
+
+            let addAnAddressMessage = document.getElementById("addAnAddressMessage");
+            if (addAnAddressMessage != null) addAnAddressMessage.style.display = shipCount == 0 ? "none" : "block";
         }
 
         let shippingHandlingPrice = shipCount * shippingHandlingFee;
@@ -161,14 +164,14 @@
                                 string displayStyle = i == 0 ? "block" : "none";
 
                                 <div id="@id" style="display:@displayStyle" class="shippingAddressBlock">
+                                    @if (Model.Addresses.Count == 1)
+                                    {
+                                        <input type="hidden" name="ShippingId" value="@Model.Addresses[0].AddressId" />
+                                    }
                                     <p class="text-dark">@Model.Addresses[i].Street<br />@Model.Addresses[i].City<br />@Model.Addresses[i].Province @Model.Addresses[i].Postal</p>
                                 </div>
                             }
-                            @if (Model.Addresses.Count == 1)
-                            {
-                                <input type="hidden" name="ShippingId" value="@Model.Addresses[0].AddressId" />
-                            }
-                            else if (Model.Addresses.Count > 1)
+                            @if (Model.Addresses.Count > 1)
                             {
                                 <select id="selectShippingAddress" class="form-control border border-secondary" name="ShippingId" disabled
                                         onchange="display_select_block('selectShippingAddress', 'shippingAddressBlock', 'shippingAddress')">
@@ -295,11 +298,19 @@
                 <div class="row rounded moist-bg-light moist-shadow p-2 ml-1">
                     @if (Model.WalletCreditCards.Any())
                     {
-                        <button type="submit" class="btn btn-primary w-100 mt-3 mb-3">Place your order</button>
+                        <button type="submit" id="placeOrderButton" class="btn btn-primary w-100 mt-3 mb-3">Place your order</button>
                     }
                     else
                     {
-                        <h5 class="text-danger">Add a payment type</h5>
+                        <h5 class="text-danger">
+                            <i class="fa fa-exclamation-triangle mr-2" aria-hidden="true"></i>Add a payment type
+                        </h5>
+                    }
+                    @if (!Model.Addresses.Any())
+                    {
+                        <h5 id="addAnAddressMessage" class="text-danger" style="display:none">
+                            <i class="fa fa-exclamation-triangle mr-2" aria-hidden="true"></i>Add an address
+                        </h5>
                     }
 
                     <h5 class="text-dark">Order Summary</h5>
