--- a/Sprint/Sprint/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Sprint/Sprint/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,6 +12,7 @@
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4 class="text-center">Create a new account.</h4>
             <hr />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label asp-for="Input.Name"></label>
